test-cases/in_before_out.exp
Error detected during type checking of modules in_before_out
test-cases/in_before_out.wybe:2:8: Uninitialised argument in call to incr, argument 1
